--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 p{
+    height: 200px;
+    background: azure;
     color: brown;
     font-weight: bold;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
