bg, fw, ff changed

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 p{
     height: 200px;
-    background: azure;
+    background: blanchedalmond;
     color: brown;
-    font-weight: bold;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 400;
+    font-family: cursive;
 }
